--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "api_id": 11306396,
     "api_hash": "7a15bb470bfd23627b92bebd48e4515d",
     "admin": 1268814003,
-    "auto_upgrade": false,
-    "max_charge_level": 5,
+    "auto_upgrade": true,
+    "max_charge_level": 10,
     "max_energy_level": 10,
-    "max_tap_level": 10
+    "max_tap_level": 13
 }
